Solved Overflow Issues in Web View and Completed upto shop by category component on mobile view

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,10 +25,16 @@
 
 
 
+
 /* Apply the custom m-0 class and other utilities to the body */
 body {
   @apply leading-normal m-0;
+  overflow-x: hidden;
 }
+
+/* * {
+  border: 1px solid red !important;
+} */
 
 @keyframes scroll {
   0% {
@@ -93,6 +99,8 @@ body {
 .zoom-in:hover {
   transform: scale(1.1); /* Adjust scale factor as needed */
 }
+
+
 
 
 
